# qr

./: Cargo.toml  README.md
examples/: qrcode.rs  qrcode_raw.rs
src/: bits.rs  canvas.rs  lib.rs  matrix.rs  optimize.rs  render_term.rs
src/render/: image.rs  svg.rs
